<resources>
    <string name="app_name">JappanAppProgram</string>
    <string name="drawit">DrawIT</string>
    <string name="guessit">GuessIt</string>
    <string name="credits">Credits</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="kanji">Kanji</string>
    <string name="answer1">Answer1</string>
    <string name="answer2">Answer2</string>
    <string name="answer3">Answer3</string>
    <string name="answer4">Answer4</string>
    <string name="nazwa">Nazwa</string>
    <string name="todo">TODO</string>
    <string name="mateusz_milewski">Mateusz Milewski</string>
    <string name="aplikacja_stworzona_w_celach_dydaktycznych">Aplikacja stworzona \n w  celach dydaktycznych</string>
    <string name="znak">Znak</string>
    <string name="back">Back</string>
    <string name="number">number</string>
    <string name="points">Points:</string>
    <string name="SystemZnakowy">TextView</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="zdjecie_znaku">zdjecie znaku</string>
    <string name="Yes" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_it_okey">Is it okey?</string>
    <string name="are_they_similar">Are they similar?</string>
    <string name="kanjidwukorpek">Kanji:</string>
    <string name="katakanadwukropek">katakana:</string>
    <string name="hiraganadwukropek">hiragana:</string>
    <string name="japanapp">JapanApp</string>
    <string name="JapanApp">JapanApp</string>
</resources>
