<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".PointsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPointsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/points"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/tvPointsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/back" />
    </LinearLayout>
</LinearLayout>