<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".GuessItActivity">

    <TextView
        android:id="@+id/tvSignSystem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#292929"
        android:gravity="center"
        android:text="@string/nazwa"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgSign"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/btAnswer1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#292929"
                android:text="@string/answer1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btAnswer2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#292929"
                android:text="@string/answer2"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/btAnswer3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#292929"
                android:text="@string/answer3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btAnswer4"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#292929"
                android:text="@string/answer4"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>