<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    android:orientation="vertical"
    tools:context=".SystemChoiceActivity">

    <Button
        android:id="@+id/btHiragana"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        android:hapticFeedbackEnabled="false"
        android:text="@string/hiragana"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorLink="#FFFFFF" />

    <Button
        android:id="@+id/btKatakana"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        android:text="@string/katakana"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorLink="#FFFFFF" />

    <Button
        android:id="@+id/btKanji"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        android:text="@string/kanji"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorLink="#FFFFFF"
        tools:text="Kanji" />
</LinearLayout>