<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:padding="10dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/imgPopUpSign"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvSimilar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/signThatPersonDraw"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imgRightImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/hira_a" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/signThatPersonDraw"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvSimilar"
        app:layout_constraintLeft_toRightOf="@id/imgPopUpSign"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAddPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorRightAnswer"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btDontAddPoints"
        app:layout_constraintTop_toBottomOf="@+id/tvSimilar" />

    <Button
        android:id="@+id/btDontAddPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWrongAnswer"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAddPoints"
        app:layout_constraintTop_toBottomOf="@+id/tvSimilar" />

    <TextView
        android:id="@+id/tvSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_they_similar"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/btDontAddPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPopUpSign"
        tools:layout_editor_absoluteY="258dp" />

</androidx.constraintlayout.widget.ConstraintLayout>